--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
 </head>
 <body class="main-content">
     <header class="section sect1 header active" id="home">
-        <i class="fa-brands fa-instagram"></i>
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="image">
+                    <img src="./Resources/img/software-developer.jpg" alt="software developer"/>
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hi, I'm <span>Alar Laanep</span>
+                    A Fullstack Developer
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consequat turpis dolor, nec viverra velit suscipit a. Sed non eros nec arcu blandit gravida quis vitae neque. Ut dui enim, efficitur laoreet efficitur nec, imperdiet at nunc. Aenean blandit mauris eu dolor pretium pharetra.
+                </p>
+                <div class="btn-con">
+                    <a href="#" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i>
+                        </span>
+                    </a>
+                </div>
+                
+            </div>
+        </div>
     </header>
     <main>
         <section class="section sect2 about" id="about"></section>
