--- a/index.html
+++ b/index.html
@@ -42,7 +42,166 @@
         </div>
     </header>
     <main>
-        <section class="section sect2 about" id="about"></section>
+        <section class="section sect2 about" id="about">
+            <div class="main-title">
+                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+            </div>
+            <div class="about-container">
+                <div class="left-about">
+                    <h4>Information about me</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quo neque voluptatibus ab rerum iure nostrum voluptates odit, recusandae aperiam eius a autem porro iusto nihil, veniam deleniti! Dicta, id.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quo neque voluptatibus ab rerum iure nostrum voluptates odit, recusandae aperiam eius a autem porro iusto nihil, veniam deleniti! Dicta, id.
+                    </p>
+                    <div class="btn-con">
+                        <a href="#" class="main-btn">
+                            <span class="btn-text">Download CV</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">650+</p>
+                            <p class="small-text">Projects<br />Completed</p>
+
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">10+</p>
+                            <p class="small-text">Years of<br />experience</p>
+
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">300+</p>
+                            <p class="small-text">Happy<br />clients</p>
+
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">400+</p>
+                            <p class="small-text">Customer<br />reviews</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-stats">
+                <h4 class="stat-title">My Skills</h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="prog-title">html5</p>
+                        <div class="progress-con">
+                            <p class="prog-text">90%</p>
+                            <div class="progress">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">css3</p>
+                        <div class="progress-con">
+                            <p class="prog-text">70%</p>
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">javascript</p>
+                        <div class="progress-con">
+                            <p class="prog-text">40%</p>
+                            <div class="progress">
+                                <span class="js"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">react.js</p>
+                        <div class="progress-con">
+                            <p class="prog-text">0%</p>
+                            <div class="progress">
+                                <span class="react"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">c#</p>
+                        <div class="progress-con">
+                            <p class="prog-text">40%</p>
+                            <div class="progress">
+                                <span class="c-sharp"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">.net</p>
+                        <div class="progress-con">
+                            <p class="prog-text">20%</p>
+                            <div class="progress">
+                                <span class="dotnet"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010-present</p>
+                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui culpa. Numquam iste pariatur similique nisi quae magnam. Suscipit doloremque ab, quia ea aut quisquam laborum provident veniam quas nisi.</p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010-present</p>
+                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui culpa. Numquam iste pariatur similique nisi quae magnam. Suscipit doloremque ab, quia ea aut quisquam laborum provident veniam quas nisi.</p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010-present</p>
+                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui culpa. Numquam iste pariatur similique nisi quae magnam. Suscipit doloremque ab, quia ea aut quisquam laborum provident veniam quas nisi.</p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010-present</p>
+                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui culpa. Numquam iste pariatur similique nisi quae magnam. Suscipit doloremque ab, quia ea aut quisquam laborum provident veniam quas nisi.</p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010-present</p>
+                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui culpa. Numquam iste pariatur similique nisi quae magnam. Suscipit doloremque ab, quia ea aut quisquam laborum provident veniam quas nisi.</p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010-present</p>
+                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui culpa. Numquam iste pariatur similique nisi quae magnam. Suscipit doloremque ab, quia ea aut quisquam laborum provident veniam quas nisi.</p>
+                </div>
+            </div>
+        </section>
         <section class="section sect3 portfolio" id="portfolio"></section>
         <section class="section sect4 blogs" id="blogs"></section>
         <section class="section sect5 contact" id="contact"></section>
