--- a/index.html
+++ b/index.html
@@ -345,7 +345,63 @@
                 </div>
             </div>
         </section>
-        <section class="section sect4 blogs" id="blogs"></section>
+        <section class="section sect4" id="blogs">
+            <div class="blogs-content">
+                <div class="main-title">
+                    <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+                </div>
+                <div class="blogs">
+                    <div class="blog">
+                        <img src="./Resources/img/blog1.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>How to Create Your Own Website</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam consectetur nulla quibusdam illo natus, omnis ducimus nesciunt nemo quae reprehenderit voluptatum eius porro nobis soluta officiis id earum ipsum vero!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./Resources/img/blog2.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>How to Become an Expert on Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet corrupti fuga nobis rerum error at autem minus, repellat libero dolor beatae voluptatibus doloremque. Ipsam odit aliquid tempora, nihil animi vitae.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./Resources/img/blog3.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>Become a Web Designer in 10 Days</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet corrupti fuga nobis rerum error at autem minus, repellat libero dolor beatae voluptatibus doloremque. Ipsam odit aliquid tempora, nihil animi vitae.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./Resources/img/port2.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>Debugging made easy with Web Inspector</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet corrupti fuga nobis rerum error at autem minus, repellat libero dolor beatae voluptatibus doloremque. Ipsam odit aliquid tempora, nihil animi vitae.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./Resources/img/port4.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>Get started with Web Design and UI Design</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet corrupti fuga nobis rerum error at autem minus, repellat libero dolor beatae voluptatibus doloremque. Ipsam odit aliquid tempora, nihil animi vitae.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./Resources/img/port6.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>This is what you need to know about Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet corrupti fuga nobis rerum error at autem minus, repellat libero dolor beatae voluptatibus doloremque. Ipsam odit aliquid tempora, nihil animi vitae.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sect5 contact" id="contact"></section>
     </main>
     <div class="controls">
