--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Alar Laanep</span>
+                    Hi, I'm <span>Alar</span><br>
                     A Fullstack Developer
                 </h1>
                 <p>
@@ -402,7 +402,95 @@
                 </div>
             </div>
         </section>
-        <section class="section sect5 contact" id="contact"></section>
+        <section class="section sect5 contact" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>Contact <span>Me</span><span class="bg-text">My Contacts</span></h2>
+                </div>
+                <div class="contact-content-con">
+                    <div class="left-contact">
+                        <h4>Contact me here</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Iure at ex nihil neque harum accusamus consectetur illum.
+                        </p>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span>Location</span>
+                                </div>
+                                <p>:Tallinn, Estonia</p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-envelope"></i>
+                                    <span>Email</span>
+                                </div>
+                                <p><span>:myemail@gmail.com</span></p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-graduation-cap"></i>
+                                    <span>Education</span>
+                                </div>
+                                <p><span>:Taltech</span></p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-mobile"></i>
+                                    <span>Mobile number</span>
+                                </div>
+                                <p><span>:+3723333333</span></p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-mobile"></i>
+                                    <span>Languages</span>
+                                </div>
+                                <p><span>:Estonia, English</span></p>
+                            </div>
+                        </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="www.facebook.com" target="_blank">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="www.twitter.com" target="_blank">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="www.github.com" target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="www.youtube.com" target="_blank">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-contact">
+                        <form action="" class="contact-form">
+                            <div class="input-control i-c-2">
+                                <input type="text" required placeholder="YOUR NAME">
+                                <input type="email" required placeholder="YOUR EMAIL">
+                            </div>
+                            <div class="input-control">
+                                <input type="text" required placeholder="ENTER SUBJECT">
+                            </div>
+                            <div class="input-control">
+                                <textarea cols="15" rows="8" placeholder="Message here..."></textarea>
+                            </div>
+                            <div class="submit-btn">
+                                <a href="#" class="main-btn">
+                                    <span class="btn-text">Submit</span>
+                                    <span class="btn-icon"><i class="fas fa-download"></i>
+                                    </span>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="controls">
         <div class="control control-1 active-btn" data-id="home">
