--- a/index.html
+++ b/index.html
@@ -509,6 +509,9 @@
             <i class="fas fa-envelope-open"></i>
         </div>
     </div>
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
+    </div>
     <script src="./Resources/js/app.js"></script>
 </body>
 </html>
